--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         }
 
         const CONFIG = {
-            DEVICE_IP: "deine-gerät-ip",
+            DEVICE_IP: "192.168.68.116",
             WEB_USERNAME: "3211db594d2c113a20ddc603efe2ef8c2382f393aed754840783a0bc63bb7be5",
             WEB_PASSWORD: "2ba1abe141836cc507e3694f97f715aa61deec4745981a085fe89939e83ec207"
         };
